--- a/src/components/_blogPost/PortableContent/PortableContent.module.scss
+++ b/src/components/_blogPost/PortableContent/PortableContent.module.scss
@@ -20,6 +20,11 @@
     }
   }
 
+  .blogContent {
+    display: grid;
+    gap: 16px;
+  }
+
   .orderedList {
     display: grid;
     list-style-type: none;
